<resources>
    <string name="app_name">Drive Points</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="next">Next</string>
    <string name="continue_fb">Connect With Facebook</string>
    <string name="search_destination">Search Destination</string>
    <string name="finish_ride">Finish My Ride</string>
    <string name="continue_google">Connect With Google</string>
    <string name="enter_the_destination">Enter The Destination</string>
    <string name="search_for_location">Search for a location</string>
    <string name="log_in">Log In</string>
    <string name="apply_now">Apply Now</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="terms_conditon">Terms &amp; Conditions</string>
    <string name="log_in_account">Log In Account</string>
    <string name="drivepoint_website">www.drivepoints.com</string>

    <string name="safe_route_title">Select Safe Routes\nTo Your Destinations</string>
    <string name="safe_route_desc">Choose one of the safe and easy route\nfrom the multiple routes to showing\non your device</string>
    <string name="track_vehicle_title">Track Your Single or\nMultiple Vehicles</string>
    <string name="track_vehicle_desc">Now you can track your single or multiple\nvehicles with their mileages, distance, hours\n
        with the multiple map layers</string>
    <string name="vehicle_insured_title">Now Get Your Vehicles\nInsured before go on\nthe Routes</string>
    <string name="vehicle_insured_desc">Get your vehicles insured with us\n
        and you can ask road side assistance\nif any problem has occurred</string>
    <string name="get_registered_title">Get Registered with us\n
        as a entrepreneur,\nprivate user or a driver</string>
    <string name="get_registered_desc">Now Get Registered and Become\n
        A Member as Entrepreneur,\nPrivate User or A Driver</string>

    <string name="facebook_app_id">1442916876056725</string>

    <string name="fb_login_protocol_scheme">fb204127990172423</string>
    <string name="server_client_id">482788615437-dic0bvs8lsb92cnjmpq53u9reuofn46f.apps.googleusercontent.com</string>
    <string name="google_client_secret">1M25iZs5Icd5k5ewyWBHKwG2</string>

    <string name="password">Password</string>
    <string name="write_message">Write Your Message</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="your_name">Your Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_email">Your Email</string>
    <string name="subject">Subject</string>
    <string name="your_number">Your Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="error_message_email">Enter Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_valid_email">Enter Valid Email</string>
    <string name="swipe_next_or_previous">Swipe Next or Previous to see other routes</string>
    <string name="warning_1">We\'d like to inform you that,\nthere is <b>Road Blockage</b>\nAhead due to <b>An Accident</b>.</string>
    <string name="warning_2">You can change your route\nor you can stay at near by\nstay points.</string>
    <string name="warning_3">"Have a Safe Journey"</string>
    <string name="warning_4">Thank You!</string>
    <string name="rating_title">How Was Your\nTravel With Us!</string>
    <string name="rating_text">We\'d appreciate if you\nrate the route where you\nhave traveled</string>
    <string name="thanks_text">We\'d like to say you\n<b>Thank You!</b>\nfor Travel with us.</string>
    <string name="road_assistance1">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit\nesse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="road_assistance2">Sed ac velit vel risus rutrum accumsan.</string>
    <string name="road_assistance3">Phasellus sollicitudin sem et gravida.</string>
    <string name="road_assistance4">Vestibulum mi auctor, mollis interdum nisi.</string>
    <string name="road_assistance5">Mauris ultrices diam ac nibh molestee.</string>
    <string name="road_assistance6">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia.</string>
    <string name="terms_condition">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia. Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugia sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam.</string>
    <string name="your_password">Your Password</string>
    <string name="contact">Contact</string>
</resources>